#
# Build samples for USB-AI16-16
#
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)


if( NOT AIOUSB_INCLUDE_DIR)
  set(AIOUSB_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../lib )
  LINK_DIRECTORIES( ${AIOUSB_INCLUDE_DIR} )
  INCLUDE_DIRECTORIES( ${AIOUSB_INCLUDE_DIR} )
  SET( CMAKE_SHARED_LINKER_FLAGS "-L${AIOUSB_INCLUDE_DIR}" )
endif(NOT AIOUSB_INCLUDE_DIR )

if( NOT LIBUSB_FOUND )
  SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../CMakeScripts )
  INCLUDE_DIRECTORIES( ${AIOUSB_INCLUDE_DIR} )
  FIND_PACKAGE(libusb-1.0 REQUIRED )
  INCLUDE_DIRECTORIES( ${LIBUSB_1_INCLUDE_DIRS} )
endif( NOT LIBUSB_FOUND )

SET(CMAKE_CXX_FLAGS "-D__aiousb_cplusplus" )

if( USE_GCC AND NOT CYGWIN )
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC" )
endif( USE_GCC AND NOT CYGWIN )


if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
  SET(CMAKE_C_FLAGS   "-std=gnu99 " )
endif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" )

ADD_LIBRARY( TestCaseSetup SHARED ${CMAKE_CURRENT_SOURCE_DIR}/TestCaseSetup.cpp )
TARGET_link_libraries( TestCaseSetup  aiousb aiousbcpp )


SET( AIOUSB_TESTCASELIB_DIR ${CMAKE_CURRENT_SOURCE_DIR} )


install( TARGETS TestCaseSetup DESTINATION lib )



