#=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
# CMAKE file for building Php wrappers 
#=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-


MESSAGE(STATUS "Rules for building Php wrapper")
FIND_PACKAGE( SWIG REQUIRED )
FIND_PACKAGE( PHP5 REQUIRED )
INCLUDE(${SWIG_USE_FILE})


INCLUDE_DIRECTORIES( ${PHP5_INCLUDE_PATH} )
SWIG_ADD_MODULE( AIOUSBphp php5 AIOUSB.i )
SWIG_LINK_LIBRARIES( AIOUSBphp aiousb )

ADD_CUSTOM_COMMAND( 
  OUTPUT ${CMAKE_SHARED_MODULE_PREFIX}AIOUSB${CMAKE_SHARED_LIBRARY_SUFFIX}
  COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_SHARED_MODULE_PREFIX}AIOUSBphp${CMAKE_SHARED_LIBRARY_SUFFIX} ${CMAKE_SHARED_MODULE_PREFIX}AIOUSB${CMAKE_SHARED_LIBRARY_SUFFIX} 
  DEPENDS AIOUSBphp
  COMMENT "Renaming PHP Library file"
  )

ADD_CUSTOM_TARGET( php_wrap ALL DEPENDS ${CMAKE_SHARED_MODULE_PREFIX}AIOUSB${CMAKE_SHARED_LIBRARY_SUFFIX} )



INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_SHARED_MODULE_PREFIX}AIOUSB${CMAKE_SHARED_LIBRARY_SUFFIX} DESTINATION  Foo )
